vscode-ext: Add closure pipes as autoClosingPairs

--- a/editors/code/language-configuration.json
+++ b/editors/code/language-configuration.json
@@ -17,6 +17,7 @@
         { "open": "{", "close": "}" },
         { "open": "[", "close": "]" },
         { "open": "(", "close": ")" },
+        { "open": "|", "close": "|" },
         { "open": "\"", "close": "\"", "notIn": ["string"] },
         { "open": "/*", "close": " */" }
     ],
